--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <div class="container-f flex center-hor bg-white header-top">
             <div class="container-l flex center-ver header-container">
                 <a href="../index.html" class="logo">
-                    <img title="logo trang chủ" src="./img/logo/LOGO FEBI-09.svg" alt="">
+                    <img title="logo trang chủ" src="./img/logo/logo-top.webp" alt="">
                 </a>
-                <div class="header-function">
+                <div class="flex header-function">
                     <div class="flex center-ver search-box">
                         <input type="text" placeholder="Search..." />
                         <button class="flex center-hor " type="submit">
-                            <img src="./img/icon/search-line.png" alt="Search" />
+                            <img src="./img/icon/search.webp" alt="Search" />
                         </button>
                     </div>
                     <a href="#" class="header-function__blog">Blog</a>
