--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FEBIFOODS</title>
+    <title>ATISHA</title>
     <link rel="icon" type="image/png" href="./img/logo/logo-menu.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Roboto:wght@400;500;700&display=swap"
@@ -14,97 +14,181 @@
 </head>
 
 <body>
-    <!-- <header class="" data-include="./component/header.html"></header> -->
-    <header class="">
-        <div class="container-f flex center-hor bg-white header-top">
-            <div class="container-l flex center-ver header-container">
-                <a href="../index.html" class="logo">
-                    <img title="logo trang chủ" src="./img/logo/logo-top.webp" alt="">
-                </a>
-                <div class="flex header-function">
-                    <div class="flex center-ver search-box">
-                        <input type="text" placeholder="Search..." />
-                        <button class="flex center-hor " type="submit">
-                            <img src="./img/icon/search.webp" alt="Search" />
-                        </button>
-                    </div>
-                    <a href="#" class="header-function__blog">Blog</a>
-                    <a href="#" class="header-function__contact">Liên hệ</a>
-                </div>
-            </div>
-        </div>
-        <div class="container-f flex center-hor header-bottom">
-            <div class="container-l flex center-ver header-container">
-                <div class="header-content flex center-ver">
-                    <div class="flex center-ver menu-container">
-                        <a href="#" class="menu-container__item">Câu chuyện Atisha</a>
-                        <a href="#" class="menu-container__item">Kombucha</a>
-                        <a href="#" class="menu-container__item">Mật chuối</a>
-                        <a href="#" class="menu-container__item">Juice</a>
-                        <a href="#" class="menu-container__item">Bỏng gạo dinh dưỡng</a>
-                        <a href="#" class="menu-container__item">Sen</a>
-                        <a href="#" class="menu-container__item">Gia vị</a>
-                        <a href="#" class="menu-container__item">Cà phê</a>
-                        <a href="#" class="menu-container__item">Chăm sóc da và làm đẹp</a>
-                        <a href="#" class="menu-container__item">Dinh dưỡng & sức khỏe</a>
-                        <button class="menu-container__bar">
-                            <img src="" alt="">
-                        </button>
-                    </div>
-                </div>
-            </div>
-    </header>
+    <header class="container-f" data-include="./component/header.html"></header>
     <main class="container-f flex flex-col center-hor">
-    </main>
-    <footer class="container-f bg-green center-ver">
-        <div class="container-l footer-container">
-            <div class="container-f flex bg-white footer-top">
-                <img src="../img/logo/logo-footer.webp" alt="">
+        <section class="container-f slide-container">
+            <div>
+                <img src="./img/banner/banner.webp" alt="Banner 1">
             </div>
-            <div class="container-f flex footer-bottom">
-                <div class="flex flex-col footer-bottom__content">
-                    <h3>công ty tnhh jan'slenmen</h3>
-                    <p>Thông điệp: “Hương vị tự nhiên từ đất và con người Việt Nam – chậm rãi, lành mạnh, bền vững”.</p>
-                    <p>84D Nguyễn Đình Chiểu (đường Cây Điệp), phường Sài Gòn.</p>
-                    <p>ĐT: 0971077678 - 0918 240 739</p>
-                    <p>Thời gian hoạt động: </p>
-                    <p>Email: jansatisha@gmail.com</p>
-                    <p>Giấy chứng nhận đăng ký kinh doanh số: 0317600630 <br>
-                        Ngày cấp: 09/12/2022 <br>
-                        Nơi cấp: Sở Kế hoạch và Đầu tư Thành phố Hồ Chí Minh</p>
+            <div>
+                <img src="./img/banner/banner.webp" alt="Banner 2">
+            </div>
+            <div>
+                <img src="./img/banner/banner.webp" alt="Banner 3">
+            </div>
+            <div>
+                <img src="./img/banner/banner.webp" alt="Banner 4">
+            </div>
+        </section>
+        <section class="container-m flex center-ver custom-dots">
+
+        </section>
+        <section class="container-f bg-white flex flex-col center-ver intro-container">
+            <div class="flex flex-col center-ver container-l intro-content">
+                <h1>lựa chọn tối ưu cho sức khỏe</h1>
+                <img src="./img/icon/Vector.webp" alt="">
+                <p>Jan’s Atisha tự hào là Người tiên phong trong hành trình đưa nông sản Việt thành trải nghiệm sống
+                    bền vững.
+                    Jan’s Atisha được nhiều người tiêu dùng yêu chuộng lối sống lành mạnh, cũng như các đối tác F&B lựa
+                    chọn bởi sự khác biệt đến từ triết lý tự nhiên và thủ công. Không chỉ là thương hiệu tiên phong gần
+                    30 năm trong hành trình khai mở giá trị nông sản Việt, tại Jan’s Atisha, chúng tôi có đội ngũ gắn bó
+                    với nghề, am hiểu lên men, tâm huyết và trách nhiệm. Chúng tôi xây dựng một hệ sinh thái bền vững –
+                    từ nông trại đến sản phẩm – nhằm mang đến hương vị tinh tế, chậm rãi và trọn vẹn cho cộng đồng.</p>
+                <a href="#" class="flex intro-readmore">Xem thêm về chúng tôi</a>
+            </div>
+            <div class="container-f intro-slide">
+                <div class="intro-slide__img">
+                    <img src="./img/image-new/cung-ly.webp " alt="">
                 </div>
-                <div class="flex flex-col footer-bottom__content">
-                    <h3>Về JAN’SLENMEN</h3>
-                    <a href="#">Giới thiệu doanh nghiệp</a>
-                    <a href="#">Tuyển dụng</a>
-                    <a href="#">Gửi góp ý, khiếu nại</a>
-                </div>
-                <div class="flex flex-col footer-bottom__content">
-                    <h3>Các chính sách</h3>
-                    <a href="#">Chính sách giá</a>
-                    <a href="#">Chính sách đổi vỏ chai</a>
-                    <a href="#">Chính sách bảo mật</a>
-                    <a href="#">Chính sách kiểm tra và đổi trả sản phẩm</a>
-                    <a href="#">Chính sách thanh toán và giao hàng</a>
-                </div>
-                <div class="flex flex-col footer-bottom__content">
-                    <h3>Mạng xã hội</h3>
-                    <div class="footer-bottom__social">
-                        <a href="#">
-                            <img src="./img/icon/instagram.webp" alt="">
-                        </a>
-                        <a href="#">
-                            <img src="./img/icon/facebook-f.webp" alt="">
-                        </a>
-                        <a href="#">
-                            <img src="./img/icon/youtube.webp" alt="">
-                        </a>
+                <div>
+                    <div class="flex flex-col intro-slide__folderImage">
+                        <img src="./img/image-new/cung-ly.webp " alt="">
+                        <div class="flex">
+                            <img src="./img/image-new/cung-ly.webp " alt="">
+                            <img src="./img/image-new/cung-ly.webp " alt="">
+                        </div>
                     </div>
                 </div>
             </div>
-
-        </div>
-    </footer>
+        </section>
+        <section class="container-f flex flex-col bg-gray advise-container ">
+            <div class="container-xs bg-white flex advise-contact">
+                <div class="advise-image">
+                    <p>Tư vấn sức khỏe</p>
+                </div>
+                <div class="flex flex-col advise-intro">
+                    <div class="flex advise-intro__top">
+                        <div class=" flex center-hor input-box">
+                            <span class="input-icon">
+                                <img src="./img/icon/User.webp" alt="user">
+                            </span>
+                            <input type="text" placeholder="Nhập tên của bạn">
+                        </div>
+                        <div class=" flex center-hor input-box">
+                            <span class="input-icon">
+                                <img src="./img/icon/Phone.webp" alt="user">
+                            </span>
+                            <input type="text" placeholder="Nhập số điện thoại">
+                        </div>
+                    </div>
+                    <div class="flex  advise-intro__bottom">
+                        <div class=" flex center-hor input-box">
+                            <span class="input-icon">
+                                <img src="./img/icon/Phone.webp" alt="user">
+                            </span>
+                            <input type="text" placeholder="Nhập số điện thoại">
+                        </div>
+                        <button class="flex btn-register">
+                            <img src="./img/icon/Phone-white.svg" alt="">
+                            Đăng ký
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="container-xs flex why-choose ">
+                <div class="why-choose__image">
+                    <img src="./img/image-new/image-why.svg" alt="">
+                </div>
+                <div class="flex flex-col why-choose__content">
+                    <h2>Vì sao bạn nên sử dụng Kombucha mỗi ngày?</h2>
+                    <ul>
+                        <li>Cân bằng hệ tiêu hóa</li>
+                        <li>Tăng cường miễn dịch</li>
+                        <li>Giải khát lành mạnh</li>
+                        <li>Năng lượng tươi mới</li>
+                        <li>Nuôi dưỡng lối sống mindful</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="bg-gray container-f flex flex-col news-container">
+            <div class="container-xs flex flex-col center-ver">
+                <h2>tin tức</h2>
+                <img src="./img/icon/Vector.webp" alt="">
+            </div>
+            <div class="container-l flex">
+                <div class="news__top">
+                    <div class="flex news-top__container">
+                        <div class="news-top__right">
+                            <a href="#" class="news__item flex flex-col">
+                                <div class="news__image ">
+                                    <img src="./img/image-new/image 49.svg">
+                                </div>
+                                <div class="flex flex-col news__body">
+                                    <h3>Quy trình sản xuất Mật chuối</h3>
+                                    <div class="flex flex-col news__content">
+                                        <p>Gia đình tôi đã bắt đầu uống Kombucha của Atisha mỗi ngày sau các bữa ăn
+                                            thay cho nước ngọt. Cơ thể nhẹ nhàng hơn, tiêu hóa tốt hơn và đặc biệt
+                                            là hương vị rất tự nhiên, không hề gắt hay ngọt gắt. Tôi cảm thấy mình
+                                            đang sống chậm lại và lắng nghe cơ thể nhiều hơn.</p>
+                                        <span class="flex center-ver news-readmore">Xem thêm</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="news-top__left flex flex-col">
+                            <a class="flex news__small">
+                                <div class="news__image">
+                                    <img src="./img/image-new/image 49.svg">
+                                </div>
+                                <div class=" flex flex-col news__body">
+                                    <h3>Quy trình sản xuất Mật chuối</h3>
+                                    <div class="flex flex-col news__content">
+                                        <p>Gia đình tôi đã bắt đầu uống Kombucha của Atisha mỗi ngày sau các bữa ăn
+                                            thay cho nước ngọt. Cơ thể nhẹ nhàng hơn, tiêu hóa tốt hơn và đặc biệt
+                                            là hương vị rất tự nhiên, không hề gắt hay ngọt gắt. Tôi cảm thấy mình
+                                            đang sống chậm lại và lắng nghe cơ thể nhiều hơn.</p>
+                                        <span class="news-readmore">Xem thêm</span>
+                                    </div>
+                                </div>
+                            </a>
+                            <a class="flex news__small">
+                                <div class="news__image">
+                                    <img src="./img/image-new/image 49.svg">
+                                </div>
+                                <div class=" flex flex-col news__body">
+                                    <h3>Quy trình sản xuất Mật chuối</h3>
+                                    <div class="flex flex-col news__content">
+                                        <p>Gia đình tôi đã bắt đầu uống Kombucha của Atisha mỗi ngày sau các bữa ăn
+                                            thay cho nước ngọt. Cơ thể nhẹ nhàng hơn, tiêu hóa tốt hơn và đặc biệt
+                                            là hương vị rất tự nhiên, không hề gắt hay ngọt gắt. Tôi cảm thấy mình
+                                            đang sống chậm lại và lắng nghe cơ thể nhiều hơn.</p>
+                                        <span class="news-readmore">Xem thêm</span>
+                                    </div>
+                                </div>
+                            </a>
+                            <a class="flex news__small">
+                                <div class="news__image">
+                                    <img src="./img/image-new/image 49.svg">
+                                </div>
+                                <div class=" flex flex-col news__body">
+                                    <h3>Quy trình sản xuất Mật chuối</h3>
+                                    <div class="flex flex-col news__content">
+                                        <p>Gia đình tôi đã bắt đầu uống Kombucha của Atisha mỗi ngày sau các bữa ăn
+                                            thay cho nước ngọt. Cơ thể nhẹ nhàng hơn, tiêu hóa tốt hơn và đặc biệt
+                                            là hương vị rất tự nhiên, không hề gắt hay ngọt gắt. Tôi cảm thấy mình
+                                            đang sống chậm lại và lắng nghe cơ thể nhiều hơn.</p>
+                                        <span class="news-readmore">Xem thêm</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="container-f bg-white center-ver" data-include="./component/footer.html"></footer>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
