--- a/index.html
+++ b/index.html
@@ -14,224 +14,8 @@
 </head>
 
 <body>
-    <!-- <header class="container-f" data-include="./component/header.html"></header> -->
-    <header class="container-f">
-        <div class="container-m flex center-ver header-container header-top">
-            <a href="../index.html" class="logo">
-                <img title="logo trang chủ" src="./img/logo/logo-top.webp" alt="">
-            </a>
-            <div class="flex header-function">
-                <div class="flex center-ver search-box">
-                    <input type="text" placeholder="Sản phẩm bạn muốn tìm kiếm" />
-                    <button class="flex center-hor " type="submit">
-                        <img src="./img/icon/search.webp" alt="Search" />
-                    </button>
-                </div>
-                <a href="#" class="header-function__blog">Blog</a>
-                <a href="#" class="header-function__contact">Liên hệ</a>
-            </div>
-        </div>
-        <div class="container-m flex header-container header-bottom">
-            <div class="menu-container__item drop-down">
-                <a href="#">Câu chuyện Atisha</a>
-                <div class="menu-list flex flex-col">
-                    <a href="#">Về chúng tôi</a>
-                    <a href="#">Giá trị doanh nghiệp</a>
-                    <a href="#">Giá trị cốt lõi</a>
-                    <a href="#">Sản phẩm kinh doanh</a>
-                    <a href="#">Quy trình sản xuất bền vững</a>
-                </div>
-            </div>
-            <div class="menu-container__item drop-down">
-                <a href="#">Kombucha</a>
-
-                <div class="menu-list flex flex-col">
-                    <a href="#">Kombucha Rosé</a>
-                    <a href="#">Kombucha Apple</a>
-                    <a href="#">Kombucha Pear</a>
-                    <a href="#">Kombucha Banana</a>
-                    <a href="#">Kombucha Berries</a>
-                    <a href="#">Kombucha Peach</a>
-                </div>
-
-            </div>
-            <div class="menu-container__item drop-down">
-                <a href="#">Mật chuối</a>
-
-                <div class="menu-list flex flex-col">
-                    <a href="#">Mật chuối Delta</a>
-                    <a href="#">Mật chuối Highland</a>
-                    <a href="#">Mật chuối ủ nhiều năm</a>
-                </div>
-
-            </div>
-            <div class="menu-container__item drop-down">
-                <a href="#">Juice</a>
-
-                <div class="menu-list flex flex-col">
-                    <a href="#">Nước ép chuối</a>
-                    <a href="#">Nước ép dâu tây</a>
-                    <a href="#">Nước bù khoáng</a>
-                </div>
-
-            </div>
-            <div class="menu-container__item drop-down">
-                <a href="#">Bỏng gạo dinh dưỡng</a>
-
-                <div class="menu-list flex flex-col">
-                    <a href="#">Thanh dinh dưỡng</a>
-                    <a href="#">Bột bỏng gạo dinh dưỡng</a>
-                </div>
-
-            </div>
-            <div class="menu-container__item drop-down">
-                <a href="#">Sen</a>
-
-                <div class="menu-list flex flex-col">
-                    <a href="#">Bột sen dinh dưỡng</a>
-                    <a href="#">Bột sen chuối</a>
-                </div>
-
-            </div>
-            <div class="menu-container__item drop-down">
-                <a href="#">Gia vị</a>
-
-                <div class="menu-list flex flex-col">
-                    <a href="#">Dầu hào chay từ chuối</a>
-                    <a href="#">Nước tương chay</a>
-                    <a href="#">Giấm Balsamic</a>
-                </div>
-
-            </div>
-            <div class="menu-container__item drop-down">
-                <a href="#">Cà phê</a>
-
-                <div class="menu-list flex flex-col">
-                    <a href="#">Robusta nhân xanh</a>
-                    <a href="#">Arabica nhân xanh</a>
-                </div>
-
-            </div>
-            <div class="menu-container__item drop-down">
-                <a href="#">Chăm sóc da & làm đẹp</a>
-
-                <div class="menu-list flex flex-col">
-                    <a href="#">Chăm sóc tóc và da đầu</a>
-                    <a href="#">Sữa rửa mặt</a>
-                    <a href="#">Kem dưỡng da, dưỡng ẩm</a>
-                    <a href="#">Tinh chất</a>
-                    <a href="#">Chăm sóc cơ thể</a>
-                </div>
-
-            </div>
-            <div class="menu-container__item drop-down">
-                <a href="#">Dinh dưỡng & sức khỏe</a>
-
-                <div class="menu-list flex flex-col">
-                    <a href="#">Phương pháp dinh dưỡng</a>
-                </div>
-
-            </div>
-            <button class="menu-container__bar">
-                <img src="./img/icon/bars.svg" alt="">
-            </button>
-            <div class="menu-list__table flex flex-col">
-                <div class="menu-root">
-                    <div class="menu-item">
-                        <a href="#">Câu chuyện Atisha</a>
-                        <div class="submenu">
-                            <div><a href="#">Về chúng tôi</a></div>
-                            <div><a href="#">Giá trị doanh nghiệp</a></div>
-                            <div><a href="#">Giá trị cốt lõi</a></div>
-                            <div><a href="#">Sản phẩm kinh doanh</a></div>
-                            <div><a href="#">Quy trình sản xuất bền vững</a></div>
-                        </div>
-                    </div>
-
-                    <div class="menu-item">
-                        <a href="#">Kombucha</a>
-                        <div class="submenu">
-                            <div><a href="#">Kombucha Rosé</a></div>
-                            <div><a href="#">Kombucha Apple</a></div>
-                            <div><a href="#">Kombucha Pear</a></div>
-                            <div><a href="#">Kombucha Banana</a></div>
-                            <div><a href="#">Kombucha Berries</a></div>
-                            <div><a href="#">Kombucha Peach</a></div>
-                        </div>
-                    </div>
-
-                    <div class="menu-item">
-                        <a href="#">Mật chuối</a>
-                        <div class="submenu">
-                            <div><a href="#">Mật chuối Delta</a></div>
-                            <div><a href="#">Mật chuối Highland</a></div>
-                            <div><a href="#">Mật chuối ủ nhiều năm</a></div>
-                        </div>
-                    </div>
-
-                    <div class="menu-item">
-                        <a href="#">Juice</a>
-                        <div class="submenu">
-                            <div><a href="#">Nước ép chuối</a></div>
-                            <div><a href="#">Nước ép dâu tây</a></div>
-                            <div><a href="#">Nước bù khoáng</a></div>
-                        </div>
-                    </div>
-
-                    <div class="menu-item">
-                        <a href="#">Bỏng gạo dinh dưỡng</a>
-                        <div class="submenu">
-                            <div><a href="#">Thanh dinh dưỡng</a></div>
-                            <div><a href="#">Bột bỏng gạo dinh dưỡng</a></div>
-                        </div>
-                    </div>
-
-                    <div class="menu-item">
-                        <a href="#">Sen</a>
-                        <div class="submenu">
-                            <div><a href="#">Bột sen dinh dưỡng</a></div>
-                            <div><a href="#">Bột sen chuối</a></div>
-                        </div>
-                    </div>
-
-                    <div class="menu-item">
-                        <a href="#">Gia vị</a>
-                        <div class="submenu">
-                            <div><a href="#">Dầu hào chay từ chuối</a></div>
-                            <div><a href="#">Nước tương chay</a></div>
-                            <div><a href="#">Giấm Balsamic</a></div>
-                        </div>
-                    </div>
-
-                    <div class="menu-item">
-                        <a href="#">Cà phê</a>
-                        <div class="submenu">
-                            <div><a href="#">Robusta nhân xanh</a></div>
-                            <div><a href="#">Arabica nhân xanh</a></div>
-                        </div>
-                    </div>
-
-                    <div class="menu-item">
-                        <a href="#">Chăm sóc da & làm đẹp</a>
-                        <div class="submenu">
-                            <div><a href="#">Chăm sóc tóc và da đầu</a></div>
-                            <div><a href="#">Sữa rửa mặt</a></div>
-                            <div><a href="#">Kem dưỡng da, dưỡng ẩm</a></div>
-                            <div><a href="#">Tinh chất</a></div>
-                            <div><a href="#">Chăm sóc cơ thể</a></div>
-                        </div>
-                    </div>
-
-                    <div class="menu-item">
-                        <a href="#">Dinh dưỡng & sức khỏe</a>
-                        <div class="submenu">
-                            <div><a href="#">Phương pháp dinh dưỡng</a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+    <header class="container-f" data-include="./component/header.html"></header>
+    <div class=" center-hor bg-white menu-mobile__container" data-include="./component/menumobile.html"> </div>
     <main class="container-f flex flex-col center-hor">
         <section class="container-f slide-container">
             <div>
@@ -248,7 +32,6 @@
             </div>
         </section>
         <section class="container-m flex center-ver custom-dots">
-
         </section>
         <section class="container-f bg-white flex flex-col center-ver intro-container">
             <div class="flex flex-col center-ver container-l intro-content">
@@ -477,6 +260,9 @@
                 </a>
             </div>
         </section>
+        <section class="container-f bg-gray">
+            <div class="container-l"></div>
+        </section>
         <section class="container-f bg-white">
             <div class="container-l flex flex-col knowledge-container">
                 <div class="container-xs flex flex-col center-ver">
@@ -485,21 +271,21 @@
                 </div>
                 <div class="knowledge-content center-hor flex">
                     <a href="#" class="knowledge-item flex flex-col">
-                        <img src="./img/image-new/image 49.svg" alt="">
+                        <img src="./img/image-new/image 49.webp" alt="">
                         <h3>Quy trình sản xuất Mật chuối</h3>
                         <p>Đây là quy trình sản xuất Mật chuối từ trang trại đến xưởng của Jan’slenmen.</p>
                     </a>
                     <a href="#" class="knowledge-item flex flex-col">
-                        <img src="./img/image-new/image 49.svg" alt="">
+                        <img src="./img/image-new/image 49.webp" alt="">
                         <h3>Quy trình sản xuất Mật chuối</h3>
                         <p>Đây là quy trình sản xuất Mật chuối từ trang trại đến xưởng của Jan’slenmen.</p>
                     </a>
                     <a href="#" class="knowledge-item flex flex-col">
-                        <img src="./img/image-new/image 49.svg" alt="">
+                        <img src="./img/image-new/image 49.webp" alt="">
                         <h3>Quy trình sản xuất Mật chuối</h3>
                         <p>Đây là quy trình sản xuất Mật chuối từ trang trại đến xưởng của Jan’slenmen.</p>
                     </a> <a href="#" class="knowledge-item flex flex-col">
-                        <img src="./img/image-new/image 49.svg" alt="">
+                        <img src="./img/image-new/image 49.webp" alt="">
                         <h3>Quy trình sản xuất Mật chuối</h3>
                         <p>Đây là quy trình sản xuất Mật chuối từ trang trại đến xưởng của Jan’slenmen.</p>
                     </a>
@@ -517,7 +303,7 @@
                         <div class="news-top__right">
                             <a href="#" class="news__item flex flex-col">
                                 <div class="news__image ">
-                                    <img src="./img/image-new/image 49.svg">
+                                    <img src="./img/image-new/image 49.webp">
                                 </div>
                                 <div class="flex flex-col news__body">
                                     <h3>Quy trình sản xuất Mật chuối</h3>
@@ -534,7 +320,7 @@
                         <div class="news-top__left flex flex-col">
                             <a class="flex news__small">
                                 <div class="news__image">
-                                    <img src="./img/image-new/image 49.svg">
+                                    <img src="./img/image-new/image 49.webp">
                                 </div>
                                 <div class=" flex flex-col news__body">
                                     <h3>Quy trình sản xuất Mật chuối</h3>
@@ -549,7 +335,7 @@
                             </a>
                             <a class="flex news__small">
                                 <div class="news__image">
-                                    <img src="./img/image-new/image 49.svg">
+                                    <img src="./img/image-new/image 49.webp">
                                 </div>
                                 <div class=" flex flex-col news__body">
                                     <h3>Quy trình sản xuất Mật chuối</h3>
@@ -564,7 +350,7 @@
                             </a>
                             <a class="flex news__small">
                                 <div class="news__image">
-                                    <img src="./img/image-new/image 49.svg">
+                                    <img src="./img/image-new/image 49.webp">
                                 </div>
                                 <div class=" flex flex-col news__body">
                                     <h3>Quy trình sản xuất Mật chuối</h3>
