--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
                     <h2>tin tức</h2>
                     <div class="flex news-leftside__top">
                         <div class="news-leftside__larger">
-                            <a href="#" class="news__item flex flex-col">
+                            <a href="./blogdetail.html" class="news__item flex flex-col">
                                 <div class="news__image ">
                                     <img src="./img/image-new/image 49.webp">
                                 </div>
@@ -46,7 +46,7 @@
                             </a>
                         </div>
                         <div class="news-leftside__small flex flex-col">
-                            <a class="flex news-small__item">
+                            <a href="./blogdetail.html" class="flex news-small__item">
                                 <div class="news__image">
                                     <img src="./img/image-new/image 49.webp">
                                 </div>
@@ -61,7 +61,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a class="flex news-small__item">
+                            <a href="./blogdetail.html" class="flex news-small__item">
                                 <div class="news__image">
                                     <img src="./img/image-new/image 49.webp">
                                 </div>
@@ -76,7 +76,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a class="flex news-small__item">
+                            <a href="./blogdetail.html" class="flex news-small__item">
                                 <div class="news__image">
                                     <img src="./img/image-new/image 49.webp">
                                 </div>
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <div class="flex flex-col news-leftside__list">
-                        <a class="flex news-list__item">
+                        <a href="./blogdetail.html" class="flex news-list__item">
                             <div class="news__image">
                                 <img src="./img/image-new/image 49.webp">
                             </div>
@@ -109,7 +109,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="flex news-list__item">
+                        <a href="./blogdetail.html" class="flex news-list__item">
                             <div class="news__image">
                                 <img src="./img/image-new/image 49.webp">
                             </div>
@@ -124,7 +124,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="flex news-list__item">
+                        <a href="./blogdetail.html" class="flex news-list__item">
                             <div class="news__image">
                                 <img src="./img/image-new/image 49.webp">
                             </div>
@@ -139,7 +139,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="flex news-list__item">
+                        <a href="./blogdetail.html" class="flex news-list__item">
                             <div class="news__image">
                                 <img src="./img/image-new/image 49.webp">
                             </div>
@@ -176,23 +176,23 @@
                         <a href="#">Gia vị chế phẩm</a>
                     </div>
                     <h3> bài viết xem nhiều</h3>
-                    <a href="#" class="flex center-ver news-right__item">
+                    <a href="./blogdetail.html" class="flex center-ver news-right__item">
                         <img src="./img/product/kumpucha.webp" alt="">
                         <p>Quy trình sản xuất Mật chuối</p>
                     </a>
-                    <a href="#" class="flex center-ver news-right__item">
+                    <a href="./blogdetail.html" class="flex center-ver news-right__item">
                         <img src="./img/product/kumpucha.webp" alt="">
                         <p>Quy trình sản xuất Mật chuối</p>
                     </a>
-                    <a href="#" class="flex center-ver news-right__item">
+                    <a href="./blogdetail.html" class="flex center-ver news-right__item">
                         <img src="./img/product/kumpucha.webp" alt="">
                         <p>Quy trình sản xuất Mật chuối</p>
                     </a>
-                    <a href="#" class="flex center-ver news-right__item">
+                    <a href="./blogdetail.html" class="flex center-ver news-right__item">
                         <img src="./img/product/kumpucha.webp" alt="">
                         <p>Quy trình sản xuất Mật chuối</p>
                     </a>
-                    <a href="#" class="flex center-ver news-right__item">
+                    <a href="./blogdetail.html" class="flex center-ver news-right__item">
                         <img src="./img/product/kumpucha.webp" alt="">
                         <p>Quy trình sản xuất Mật chuối</p>
                     </a>
