--- a/intro.html
+++ b/intro.html
@@ -38,8 +38,127 @@
             </div>
         </section>
         <section class="intro-padding bg-gray container-f ">
-            <div class="flex flex-col container-xs">
-                
+            <div class="flex flex-col center-ver container-s intro-content">
+                <h1>lựa chọn tối ưu cho sức khỏe</h1>
+                <img src="./img/icon/Vector.webp" alt="">
+                <p>Khởi nguồn từ một niềm tin giản dị: nông sản Việt có thể trở thành nguồn cảm hứng cho một lối sống
+                    chân niệm, lành mạnh và bền vững. Từ năm 1995 đến nay, Jan’s Atisha đã kiên định trên hành trình gần
+                    30 năm nghiên cứu và sáng tạo sản phẩm lên men tự nhiên. Chúng tôi tự hào mang đến hệ sinh thái sản
+                    phẩm đa dạng – từ Kombucha, mật chuối, bột ngũ cốc, gia vị và thực phẩm chay – tất cả đều thu công,
+                    không phụ gia công nghiệp, nhằm nuôi dưỡng sức khỏe thể chất và tinh thần cho khách hàng Việt Nam và
+                    quốc tế.</p>
+            </div>
+        </section>
+        <section class="intro-padding bg-white container-f ">
+            <div class="flex flex-col center-ver container-s intro-content">
+                <h2>GIÁ TRỊ DOANH NGHIỆP</h2>
+                <img src="./img/icon/Vector.webp" alt="">
+                <div class="flex flex-col enterprise-value__content">
+                    <b>TẦM NHÌN</b>
+                    <p>DẪN DẮT NGÀNH F & B MANG LẠI LỢI ÍCH TỐT NHẤT CHO NGƯỜI TIÊU DÙNG VÀ XÃ HỘI.</p>
+                </div>
+                <div class="flex flex-col enterprise-value__content">
+                    <b>SỨ MỆNH</b>
+                    <p>THÚC ĐẨY TIÊU DÙNG CHÁNH NIỆM BẰNG CÁCH TẠO RA SẢN PHẨM BỀN VỮNG VÀ GIÁO DỤC VỀ LỐI SỐNG BỀN
+                        VỮNG.</p>
+                </div>
+                <div class="flex flex-col enterprise-value__content">
+                    <b>TRIẾT LÝ SỐNG</b>
+                    <p>MỖI SẢN PHẨM TỪ JAN’S ATISHA LÀ MỘT MINH CHỨNG CHO LỐI SỐNG CHÁNH NIỆM: TINH TẾ TỪ ĐIỀU GIẢN DỊ,
+                        TỐT CHO CƠ THỂ, LÀNH CHO MÔI TRƯỜNG VÀ GẮN KẾT CON NGƯỜI.</p>
+                </div>
+            </div>
+        </section>
+        <section class="intro-padding bg-primary container-f ">
+            <div class="flex flex-col center-ver container-s intro-content special">
+                <h2>Giá trị cốt lỗi</h2>
+                <img src="./img/icon/Vector-white.svg" alt="">
+                <div class="flex corevalues__container">
+                    <div class="bg-white flex flex-col corevalues__item">
+                        <h3>TỰ NHIÊN</h3>
+                        <p>Jan’s Atisha cam kết giữ trọn sự tinh khiết từ nông sản Việt. Nói không với phụ gia công
+                            nghiệp. Để mỗi sản phẩm đều lành cho sức khỏe và thân thiện với môi trường.</p>
+                    </div>
+                    <div class="bg-white flex flex-col corevalues__item">
+                        <h3>THỦ CÔNG</h3>
+                        <p>Mỗi chai, mỗi giọt đều được tạo nên từ sự kiên nhẫn và bàn tay người thợ, giữ gìn hương vị
+                            thuần khiết qua quá trình lên men chậm rãi.</p>
+                    </div>
+                    <div class="bg-white flex flex-col corevalues__item">
+                        <h3>CHÁNH NIỆM</h3>
+                        <p>Sản phẩm Atisha không chỉ tốt cho cơ thể, mà còn gọi nhắc lối sống tỉnh thức – tinh tế từ
+                            điều giản dị, nuôi dưỡng cả sức khỏe và tinh thần con người.</p>
+                    </div>
+                    <div class="bg-white flex flex-col corevalues__item">
+                        <h3>BỀN VỮNG</h3>
+                        <p>Atisha phát triển hài hòa cùng cộng đồng và môi trường, đồng hành với người nông dân Việt
+                            trên hành trình trọn vẹn giá trị lâu dài.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="intro-padding bg-white container-f ">
+            <div class="flex flex-col center-ver container-l intro-content ">
+                <h2>các sản phẩm kinh doanh</h2>
+                <img src="./img/icon/Vector.webp" alt="">
+                <div class="flex allproduct-type__container">
+                    <div class="bg-white flex flex-col allproduct-type__item">
+                        <h3>KOMBUCHA</h3>
+                        <p>Mỗi chai Kombucha của Jan’s Atisha được lên men chậm rãi từ trà và trái cây Việt. Kombucha
+                            mang lại sự cân bằng tự nhiên và nguồn năng lượng tươi mới.</p>
+                    </div>
+                    <div class="bg-white flex flex-col allproduct-type__item">
+                        <h3>MẬT CHUỐI</h3>
+                        <p>Mật chuối Atisha được chắt lọc từ nông sản Việt qua quy trình ủ tự nhiên và thủ công. Vị ngọt
+                            thanh, hương thơm dịu nhẹ, giàu dinh dưỡng.</p>
+                    </div>
+                    <div class="bg-white flex flex-col allproduct-type__item">
+                        <h3>JUICE</h3>
+                        <p>Từ dầu hào chay, nước tương chay đến giấm balsamic chuối – Atisha tạo nên gia vị thuần chay
+                            độc đáo, giúp tăng thêm hương vị món ăn.</p>
+                    </div>
+                    <div class="bg-white flex flex-col allproduct-type__item">
+                        <h3>BỎNG GẠO DINH DƯỠNG</h3>
+                        <p>Bột chuối, nước ép chuối lên men… những chế phẩm sáng tạo khác được làm từ nguồn chuối Việt
+                            Nam dồi dào.</p>
+                    </div>
+                    <div class="bg-white flex flex-col allproduct-type__item">
+                        <h3>SEN</h3>
+                        <p>Từ Rice Milk, bột đóng gói đến nước bào gạo – Atisha khai thác sự tinh túy của hạt gạo Việt.
+                            Những sản phẩm này nhẹ nhàng, dễ tiêu hóa và giàu năng lượng tự nhiên.</p>
+                    </div>
+                    <div class="bg-white flex flex-col allproduct-type__item">
+                        <h3>CÀ PHÊ</h3>
+                        <p>Cà phê Atisha được lựa chọn từ những hạt nguyên bản, rang thủ công để giữ trọn hương vị tự
+                            nhiên.</p>
+                    </div>
+                    <div class="bg-white flex flex-col allproduct-type__item">
+                        <h3>CHĂM SÓC DA & LÀM ĐẸP</h3>
+                        <p>Bột chuối, nước ép chuối lên men… những chế phẩm sáng tạo khác được làm từ nguồn chuối Việt
+                            Nam dồi dào.</p>
+                    </div>
+                    <div class="bg-white flex flex-col allproduct-type__item">
+                        <h3>GIA VỊ</h3>
+                        <p>Từ Rice Milk, bột đóng gói đến nước bào gạo – Atisha khai thác sự tinh túy của hạt gạo Việt.
+                            Những sản phẩm này nhẹ nhàng, dễ tiêu hóa và giàu năng lượng tự nhiên.</p>
+                    </div>
+                    <div class="bg-white flex flex-col allproduct-type__item">
+                        <h3>DINH DƯỠNG & SỨC KHỎE</h3>
+                        <p>Cà phê Atisha được lựa chọn từ những hạt nguyên bản, rang thủ công để giữ trọn hương vị tự
+                            nhiên.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="intro-padding bg-gray container-f ">
+            <div class="flex flex-col center-ver container-l intro-content ">
+                <h2>Quy trình sản xuất & bền vững</h2>
+                <img src="./img/icon/Vector.webp" alt="">
+                <p>Jan’s Atisha trân trọng từng bước trong quy trình thủ công chậm rãi, gìn giữ trọn vẹn hương vị tự
+                    nhiên và giá trị dinh dưỡng của nông sản Việt. Hơn cả một sản phẩm, chúng tôi cam kết phát triển bền
+                    vững, đồng hành cùng nông dân và nuôi dưỡng một lối sống hài hòa với môi trường.</p>
+                <img src="./img/image-new/image 74.webp" alt="">
+                <img src="./img/image-new/image 75.webp" alt="">
             </div>
         </section>
     </main>
