--- a/product.html
+++ b/product.html
@@ -40,7 +40,7 @@
                 </select>
             </div>
             <div class="container-l flex product-page__container">
-                <a class="flex flex-col product-page__item">
+                <a href="./product-detail.html" class="flex flex-col product-page__item">
                     <img src="./img/product/item-1.svg" alt="">
                     <div class="flex flex-col product-price">
                         <h3 class="product-title">Kumpucha ROSE</h3>
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                 </a>
-                <a class="flex flex-col product-page__item">
+                <a href="./product-detail.html" class="flex flex-col product-page__item">
                     <img src="./img/product/item-2.svg" alt="">
                     <div class="flex flex-col product-price">
                         <h3 class="product-title">Kumpucha ROSE</h3>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                 </a>
-                <a class="flex flex-col product-page__item">
+                <a href="./product-detail.html" class="flex flex-col product-page__item">
                     <img src="./img/product/item-3.svg" alt="">
                     <div class="flex flex-col product-price">
                         <h3 class="product-title">Kumpucha ROSE</h3>
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                 </a>
-                <a class="flex flex-col product-page__item">
+                <a href="./product-detail.html" class="flex flex-col product-page__item">
                     <img src="./img/product/item-4.svg" alt="">
                     <div class="flex flex-col product-price">
                         <h3 class="product-title">Kumpucha ROSE</h3>
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                 </a>
-                <a class="flex flex-col product-page__item">
+                <a href="./product-detail.html" class="flex flex-col product-page__item">
                     <img src="./img/product/item-1.svg" alt="">
                     <div class="flex flex-col product-price">
                         <h3 class="product-title">Kumpucha ROSE</h3>
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                 </a>
-                <a class="flex flex-col product-page__item">
+                <a href="./product-detail.html" class="flex flex-col product-page__item">
                     <img src="./img/product/item-2.svg" alt="">
                     <div class="flex flex-col product-price">
                         <h3 class="product-title">Kumpucha ROSE</h3>
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                 </a>
-                <a class="flex flex-col product-page__item">
+                <a href="./product-detail.html" class="flex flex-col product-page__item">
                     <img src="./img/product/item-3.svg" alt="">
                     <div class="flex flex-col product-price">
                         <h3 class="product-title">Kumpucha ROSE</h3>
@@ -152,7 +152,7 @@
                         </div>
                     </div>
                 </a>
-                <a class="flex flex-col product-page__item">
+                <a href="./product-detail.html" class="flex flex-col product-page__item">
                     <img src="./img/product/item-4.svg" alt="">
                     <div class="flex flex-col product-price">
                         <h3 class="product-title">Kumpucha ROSE</h3>
